--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 nicegui = "^1.4.21"
+pytest = "^8.1.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
