--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,15 @@ flake8 = "^7.0.0"
 black = "^24.3.0"
 pytest = "^8.1.1"
 
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -v"
+testpaths = [
+    "tests",
+    "integration",
+]
+pythonpath = "src"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
