--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-nicegui = "^1.4.21"
+fastapi = {extras = ["standard"], version = "^0.112.2"}
+python-i18n = "^0.3.9"
+sqlmodel = "^0.0.22"
+psycopg2 = "^2.9.9"
+alembic = "^1.13.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
