--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,14 @@
 ---
-version: '3'
 services:
   postgres:
     image: postgres:16
     ports:
       - 5432:5432
     volumes:
-      - ./.pg_data:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=devportal
       - POSTGRES_PASSWORD=devportal
+
+volumes:
+  postgres:
