--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-i18n = "^0.3.9"
 sqlmodel = "^0.0.22"
 psycopg2 = "^2.9.9"
 alembic = "^1.13.2"
+alembic-postgresql-enum = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
