--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://devportal:devportal@localhost/devportal
+sqlalchemy.url = postgresql://appatlas:appatlas@localhost/appatlas
 
 
 [post_write_hooks]
