--- a/compose.yml
+++ b/compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_USER=devportal
-      - POSTGRES_PASSWORD=devportal
+      - POSTGRES_USER=appatlas
+      - POSTGRES_PASSWORD=appatlas
 
 volumes:
   postgres:
