--- a/compose.yml
+++ b/compose.yml
@@ -6,9 +6,24 @@ services:
       - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
+    networks:
+      - postgres
     environment:
       - POSTGRES_USER=appatlas
       - POSTGRES_PASSWORD=appatlas
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - 8080:80
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@me.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    networks:
+      - postgres
 
 volumes:
   postgres:
+
+networks:
+  postgres:
+    driver: bridge
